--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_install:
   - BUILD_TOP=`dirname $TRAVIS_BUILD_DIR`
   - EXIT_VALUE=0
   - sudo apt-get update > /dev/null
-#  - composer self-update
+  - composer self-update
   # mail requirements
   - sudo apt-get update -qq
   - sudo apt-get install -y -qq postfix
@@ -42,7 +42,7 @@ install:
   # install php packages required for running a web server from drush on php 5.3
   - sudo apt-get install -y --force-yes php5-cgi php5-mysql
   # install drush globally
-  - composer global require drush/drush:6.*
+  - composer global require drush/drush:6.* --prefer-source
   # add composer's global bin directory to the path
   # see: https://github.com/drush-ops/drush#install---composer
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
