--- a/.travis.yml
+++ b/.travis.yml
@@ -77,7 +77,7 @@ script:
   # @todo put the other stuff here to build but this should give us a site
   - cd /var/www/drupal/sites/all/modules
   # RRS
-  - phpunit login
+  - phpunit loginok
   # phantomjs login.js "http://127.0.0.1/"
 after_script:
   - drush status
