--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: php
  
 php:
-  - 5.3
-  - 5.4
   - 5.5
-  - hhvm
  
 matrix:
   allow-failures:
@@ -77,7 +74,7 @@ script:
   # @todo put the other stuff here to build but this should give us a site
   - cd /var/www/drupal/sites/all/modules
   # RRS
-  - phpunit loginok
+  - phpunit loginok --verbose
   # phantomjs login.js "http://127.0.0.1/"
 after_script:
   - drush status
