--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,8 @@ script:
   # @todo put the other stuff here to build but this should give us a site
   - cd /var/www/drupal/sites/all/modules
   # RRS
-  - phpunit --configuration phpunit_mysql.xml --coverage-text
+  
+script: phpunit
   # phantomjs login.js "http://127.0.0.1/"
 after_script:
   - drush status
