--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ mysql:
   encoding: $DB_ENCODE
  
 before_install:
+  - pwd
   - export UPDATE TRAVIS_BUILD_DIR
   - BUILD_TOP=`dirname $TRAVIS_BUILD_DIR`
   - EXIT_VALUE=0
@@ -73,9 +74,10 @@ script:
   - drush site-install -y --db-url=mysql://root@127.0.0.1/travisdb --db-su='root' --db-su-pw='' --account-name=admin --account-pass=admin
   # @todo put the other stuff here to build but this should give us a site
   - cd /var/www/drupal/sites/all/modules
+  - pwd
   # RRS
-  
-script: phpunit
+  - cd ~	
+  - phpunit
   # phantomjs login.js "http://127.0.0.1/"
 after_script:
   - drush status
