--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ mysql:
  
 before_install:
   - pwd
+  - ls
   - export UPDATE TRAVIS_BUILD_DIR
   - BUILD_TOP=`dirname $TRAVIS_BUILD_DIR`
   - EXIT_VALUE=0
@@ -71,7 +72,7 @@ before_script:
 script:
   # stand up drupal
   
-  - phpunit --configuration phpunit.xml 
+  - phpunit --configuration /home/travis/build/raresmr/xtravisx/phpunit.xml 
   - cd /var/www/drupal
   - drush site-install -y --db-url=mysql://root@127.0.0.1/travisdb --db-su='root' --db-su-pw='' --account-name=admin --account-pass=admin
   # @todo put the other stuff here to build but this should give us a site
