add check fo xvfb

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,11 +47,13 @@ install:
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
 before_script:
   # RRS initialize xvfb for selenium
+  - xdpyinfo -display :0 >/dev/null 2>&1 && echo "In use" || echo "Free"
   - "sh -e /etc/init.d/xvfb start"
   - "export DISPLAY=:99.0"
   - "wget http://selenium.googlecode.com/files/selenium-server-standalone-2.31.0.jar"
-  - "java -jar selenium-server-standalone-2.31.0.jar > /dev/null &"
+  - "java -jar selenium-server-standalone-2.31.0.jar"
   - sleep 5
+  - xdpyinfo -display :0 >/dev/null 2>&1 && echo "In use" || echo "Free 2"
   #RRS add composer in order to install seleneium
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install
