--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,6 @@ before_script:
   - "java -jar selenium-server-standalone-2.48.2.jar > /dev/null &"
   - sleep 10
   - xdpyinfo -display :0 >/dev/null 2>&1 && echo "In use" || echo "Free 2"
-  - sudo drush --root=/var/www/drupal runserver --server=builtin 80 &
   - netstat -ntpl
   - curl http://localhost:4444/wd/hub/status
   - ps -ef | grep -i Xvfb
@@ -81,6 +80,8 @@ before_script:
   # get some plugins good for testing and building systems rapidly
   - drush dl drush_recipes, registry_rebuild, drush_ecl --y
   - drush cc drush
+  - sudo apt-get install drush
+  - sudo drush --root=/var/www/drupal runserver --server=builtin 80 &
  
 script:
   # stand up drupal
