--- a/.travis.yml
+++ b/.travis.yml
@@ -89,7 +89,7 @@ before_script:
   - echo "cgi.fix_pathinfo = 1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - ~/.phpenv/versions/$(phpenv version-name)/sbin/php-fpm
   # configure apache virtual hosts
-  - sudo cp -f build/travis-ci-apache /etc/apache2/sites-available/default
+  - sudo cp -f /home/travis/build/raresmr/xtravisx/travis-ci-apache /etc/apache2/sites-available/default
   - sudo service apache2 restart	  
   - netstat -ntpl
   #install apache END
